# system-settings

./: Cargo.toml  PKGBUILD  README.md
examples/: sysinfo.rs
src/: gui.rs  helpers.rs  main.rs
src/gui/: addon_widgets.rs  pages.rs  pref.rs  root.rs  styles.rs
src/gui/pages/: access_page.rs  battery_page.rs  bk.rs  bluetooth.rs  bluetooth_page.rs  date_time.rs  date_time_page.rs  desktop_page.rs  display_page.rs  general.rs  general_page.rs  keyboard.rs  keyboard_page.rs  lang_region.rs  lang_region_page.rs  mouse_page.rs  network.rs  network_page.rs  notification_page.rs  printer_page.rs  privacy_page.rs  sound.rs  sound_page.rs  sys_info_page.rs  touchpad_page.rs  update_page.rs  user_group.rs  user_page.rs
src/gui/pages/bluetooth/: blue_content.rs  bluepage.rs  bluesettings.rs
src/gui/pages/date_time/: date_time_page.rs  date_time_utils.rs
src/gui/pages/general/: font_page.rs  general_page.rs  icon_page.rs  theme_page.rs
src/gui/pages/keyboard/: add_input_source_sec.rs  conf_input_source_sec.rs  keyboard_page.rs  keyboard_utils.rs
src/gui/pages/lang_region/: lang_region_page.rs  lang_region_utils.rs
src/gui/pages/network/: common.rs  netsettings.rs  networkpage.rs  wire.rs  wireless.rs
src/gui/pages/sound/: audio.rs  configure.rs  input.rs  output.rs  soundeffect.rs  soundpage.rs
src/gui/pages/user_group/: groups_tab.rs  user_group_page.rs  users_tab.rs
src/gui/pages/user_group/groups_tab/: add_group_page.rs  edit_group_page.rs
src/gui/pages/user_group/users_tab/: add_user_page.rs  change_groups_page.rs  change_pwd_page.rs  change_user_info_page.rs  user_info_page.rs
src/helpers/: config.rs  macros.rs
