[package]
name = "system_settings"
version = "0.1.0"
authors = ["hangleang <hangleang127@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["debug", "svg"] }
iced_style = "0.2"
iced_native = "0.2"
iced_custom_widget = { git="https://github.com/leang27/iced_custom_widget", branch="leang" }
vedas_core = { git="https://github.com/koompi/vedas", branch="master" }

serde = { version = "1.0", features=['derive'] }
serde_json = "1.0"
smart-default = "0.6"
